friends page alignment issues are now fixed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,17 @@
   background-color: white;
 }
 
+.picture-wrapper{
+  border-style: solid;
+  border-width: medium;
+  border-radius: 5px;
+  border-color: #d1d1d1;
+  background-color: white;
+  margin: 2px;
+  width: 250px;
+  height: 190px;
+}
+
 #item_importance {
   max-width: 75px;
 }
